Corrected form spacing and alignment

--- a/project.css
+++ b/project.css
@@ -123,6 +123,8 @@ form button {
 label {
     color: #BAE8E8;
     opacity: 60%;
+    margin: 0;
+    padding-left: 25%;
 }
 
 .contact-img {
